infra/manifests/default/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  type: ExternalName
  externalName: tennis-ml-registry
  ports:
    - name: http
      port: 5000
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: mlflow.macsteve.lan
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
    - host: prefect.macsteve.lan
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prefect-server
                port:
                  number: 4200
    - host: bento.macsteve.lan
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bento-serving
                port:
                  number: 3000
    - host: dashboard.macsteve.lan
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tennis-dashboard
                port:
                  number: 8501
    - host: registry.macsteve.lan
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: registry
                port:
                  number: 5000
